--- a/Azure/yaml/deploy1.yaml
+++ b/Azure/yaml/deploy1.yaml
@@ -12,8 +12,6 @@ spec:
       containers:
       - name: mcarbabybfftelepreco
         image: rodoflho/mcarbabybfftelepreco:latest
-        ports:
-        - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
@@ -22,10 +20,10 @@ metadata:
   labels: 
     app: poc-telepreco-bff
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
-  - port: 8080
-    nodePort: 30001
+  - port: 11001
+    targetPort: 80
   selector:
     app: poc-telepreco-bff
   
