improving helm and adding py project as k8s job

--- a/Docker/asterisk/templates/Pod.yaml
+++ b/Docker/asterisk/templates/Pod.yaml
@@ -12,3 +12,4 @@ spec:
       containers:
       - name: mcarbabymicroserviceasterisk
         image: rodoflho/mcarbabyasterisk:latest
+        imagePullPolicy: Always
