--- a/Projects/PyRabbitJob/Dockerfile
+++ b/Projects/PyRabbitJob/Dockerfile
@@ -15,4 +15,4 @@ WORKDIR /app
 ADD . /app
 
 # During debugging, this entry point will be overridden. For more information, refer to https://aka.ms/vscode-docker-python-debug
-CMD ["python", "test.py"]
+CMD ["python", "pyRabbitQueue.py"]
